# lambda-image-resize

./: shell.nix
image-resize/: Cargo.toml
image-resize/src/: main.rs
lambda-with-sql/: Cargo.toml
lambda-with-sql/src/: main.rs
rust-http-dynamodb/: Cargo.toml
rust-http-dynamodb/src/: definition.rs  main.rs  service.rs
rust-image-resize/: Cargo.toml
rust-image-resize/src/: main.rs
rust-postgres/: Cargo.toml
rust-postgres/src/: main.rs
